[gd_scene load_steps=46 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_14.png" type="Texture" id=2]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_09.png" type="Texture" id=3]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_07.png" type="Texture" id=4]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_12.png" type="Texture" id=5]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_13.png" type="Texture" id=6]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_11.png" type="Texture" id=7]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_02.png" type="Texture" id=8]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_08.png" type="Texture" id=9]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_10.png" type="Texture" id=10]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_15.png" type="Texture" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]
[ext_resource path="res://Assets/menu_principal_juego.png" type="Texture" id=13]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_05.png" type="Texture" id=14]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_06.png" type="Texture" id=15]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_04.png" type="Texture" id=16]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_00.png" type="Texture" id=17]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_01.png" type="Texture" id=18]
[ext_resource path="res://Player/Gisselle_parpadeo/sprite_03.png" type="Texture" id=19]
[ext_resource path="res://Assets/fuentes/PixelFlag.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Assets/volumen.png" type="Texture" id=21]
[ext_resource path="res://sonidos_y_musica/musica_menu_inicio-rei2.mp3" type="AudioStream" id=22]
[ext_resource path="res://Assets/fuentes/Pixeled.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://Assets/parpados_menu.PNG" type="Texture" id=24]
[ext_resource path="res://Assets/parpados_menu_2.PNG" type="Texture" id=25]
[ext_resource path="res://Assets/parpados_menu_3.PNG" type="Texture" id=26]

[sub_resource type="DynamicFont" id=19]
size = 30
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 20 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 23 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 250.0
flag_align_y = true
flag_disable_z = true
direction = Vector3( 7, 0, 0 )
spread = 47.5
gravity = Vector3( -100, 98, 0 )
initial_velocity = 36.0
angular_velocity = 3.73
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 10.0

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 130, 116 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "parpadeo_m"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 102, 141 ), Vector2( 102, 159 ), Vector2( 102, 141 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 156, 118 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "parpadeo_m"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 155, 117 ), Vector2( 160, 150 ), Vector2( 157, 116 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 91, 66 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "parpadeo"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 91, 66 ), Vector2( 92, 93 ), Vector2( 92, 66 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 190, 70 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "parpadeo_centro_izquiedo"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 190, 70 ), Vector2( 190, 91 ), Vector2( 190, 72 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 542.875, 87 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "parpadeo_3_i"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 542.875, 87 ), Vector2( 543, 68 ), Vector2( 544, 87 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 611, 87 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "parpadeo_3_d"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 611, 87 ), Vector2( 611, 61 ), Vector2( 611, 87 ) ]
}

[node name="menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511, 300 )
texture = ExtResource( 13 )

[node name="controles" type="Button" parent="."]
margin_left = 220.0
margin_top = 527.0
margin_right = 373.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 19 )
text = "Controles"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditos" type="Button" parent="."]
margin_left = 723.0
margin_top = 527.0
margin_right = 856.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 19 )
text = "Creditos"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 416.0
margin_top = 410.0
margin_right = 644.0
margin_bottom = 601.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jugar" type="Button" parent="VBoxContainer"]
margin_right = 228.0
margin_bottom = 35.0
custom_colors/font_color_disabled = Color( 1, 0.862745, 0.862745, 1 )
custom_colors/font_color_focus = Color( 0.596078, 0.341176, 0.341176, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.596078, 0.341176, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.215686, 0.215686, 1 )
custom_fonts/font = SubResource( 2 )
text = "Jugar"
flat = true

[node name="opciones" type="Button" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 228.0
margin_bottom = 74.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.596078, 0.341176, 0.341176, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.596078, 0.341176, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.215686, 0.215686, 1 )
custom_fonts/font = SubResource( 3 )
text = "Opciones"
flat = true

[node name="salir" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 228.0
margin_bottom = 113.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.596078, 0.341176, 0.341176, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.596078, 0.341176, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.215686, 0.215686, 1 )
custom_fonts/font = SubResource( 4 )
text = "Salir"
flat = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 535, 347 )
scale = Vector2( 1.52, 1.48 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite2"]
position = Vector2( -4.85437, -7.5 )
frames = SubResource( 1 )
frame = 9
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 251.0
margin_top = 96.0
margin_right = 809.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 6 )
text = "GISSELLE'S ADVENTURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="las_opciones" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/las_opciones"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/las_opciones"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0.25098, 0.309804, 0.462745, 0.854902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/las_opciones"]
margin_left = 450.0
margin_top = 180.0
margin_right = 592.0
margin_bottom = 217.0
text = "Volumen de la musica"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/las_opciones"]
margin_left = 450.0
margin_top = 231.0
margin_right = 592.0
margin_bottom = 268.0
text = "Volumen de efectos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="CanvasLayer/las_opciones"]
margin_left = 450.0
margin_top = 199.0
margin_right = 601.0
margin_bottom = 215.0
min_value = -60.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="CanvasLayer/las_opciones"]
margin_left = 450.0
margin_top = 246.0
margin_right = 601.0
margin_bottom = 262.0
min_value = -60.0
max_value = 5.0
value = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/las_opciones"]
position = Vector2( 435, 210 )
scale = Vector2( 0.0405274, 0.0483399 )
texture = ExtResource( 21 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/las_opciones"]
position = Vector2( 434, 254 )
scale = Vector2( 0.0405274, 0.0483399 )
texture = ExtResource( 21 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/las_opciones"]
margin_left = 102.0
margin_top = 506.0
margin_right = 251.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/las_opciones/VBoxContainer"]
margin_right = 149.0
margin_bottom = 20.0
text = "Cerrar"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 685, 96 )
amount = 4
lifetime = 3.0
preprocess = 2.0
speed_scale = 1.28
explosiveness = 0.66
randomness = 1.0
process_material = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
autoplay = true

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 130, 116 )
scale = Vector2( 0.124046, 0.174083 )
texture = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite4"]
autoplay = "parpadeo_m"
anims/RESET = SubResource( 9 )
anims/parpadeo_m = SubResource( 10 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 156, 118 )
scale = Vector2( 0.253068, 0.320755 )
texture = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3"]
autoplay = "parpadeo_m"
anims/RESET = SubResource( 7 )
anims/parpadeo_m = SubResource( 8 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 91, 66 )
scale = Vector2( 0.5, 0.628205 )
texture = ExtResource( 25 )
offset = Vector2( 466, 11.1429 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite5"]
autoplay = "parpadeo"
anims/RESET = SubResource( 11 )
anims/parpadeo = SubResource( 12 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 190, 70 )
scale = Vector2( 0.419014, 0.49359 )
texture = ExtResource( 25 )
offset = Vector2( 466, 11.1429 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite6"]
autoplay = "parpadeo_centro_izquiedo"
anims/RESET = SubResource( 13 )
anims/parpadeo_centro_izquiedo = SubResource( 14 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 542.875, 87 )
scale = Vector2( 0.406914, 0.726351 )
texture = ExtResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite7"]
autoplay = "parpadeo_3_i"
anims/RESET = SubResource( 15 )
anims/parpadeo_3_i = SubResource( 16 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 611, 87 )
scale = Vector2( 0.554519, 0.726351 )
texture = ExtResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite8"]
autoplay = "parpadeo_3_d"
anims/RESET = SubResource( 17 )
anims/parpadeo_3_d = SubResource( 18 )

[connection signal="pressed" from="controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/salir" to="." method="_on_salir_pressed"]
[connection signal="value_changed" from="CanvasLayer/las_opciones/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/las_opciones/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="CanvasLayer/las_opciones/VBoxContainer/Button" to="." method="_on_Button_pressed"]
